# mussia31

./: .gitignore  BUILD.bazel  Cargo.toml  Dockerfile  MODULE.bazel  README.md  Tiltfile  WORKSPACE.bazel  deno-ex.ts  example_library.bzl  foo.py  foo.ts  go.mod  justfile  main.go  nx.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.base.json
apps/go/get-os-version/: Cargo.toml  project.json
apps/go/go-app/: BUILD.bazel  main.go  project.json
apps/node/express/: BUILD.bazel
apps/python/calculator/: BUILD.bazel
apps/python/web/: BUILD.bazel
apps/rust-web-api/: project.json
apps/rust/cli-app/: BUILD.bazel  Cargo.toml  project.json
apps/rust/cli-app/src/: main.rs
apps/rust/http-app/: BUILD.bazel  Cargo.toml  project.json
apps/rust/rust-k8s-controller/: BUILD.bazel  Cargo.toml  project.json
apps/rust/rust-k8s-controller/src/: crd.rs  main.rs
apps/rust/rust-k8s-controller/src/actions/: Cargo.toml
apps/rust/tauri-app/: BUILD.bazel  Cargo.toml  project.json
apps/rust/tauri-leptos/: Cargo.toml
apps/rust/tauri-leptos/src-tauri/: Cargo.toml  tauri.conf.json
bzl/: BUILD.bazel  WORKSPACE.bazel  main.py
k8s/: BUILD.bazel  deployment.yaml
libs/go/mongodb/: BUILD.bazel  go-mongodb.go  go-mongodb_test.go  project.json
libs/node/example-node-lib/: BUILD.bazel  README.md  jest.config.ts  project.json
libs/node/example-node-lib/src/: index.ts
libs/node/example-node-lib/src/lib/: node-example-node-lib.spec.ts  node-example-node-lib.ts
libs/rust/example-lib/: BUILD.bazel  project.json
libs/rust/example-lib/src/: lib.rs
libs/rust/mongo/: BUILD.bazel
libs/rust/mongo/src/: lib.rs
scripts/gcloud/: BUILD.bazel  get-secret.sh
