load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

# gazelle:prefix github/yurikrupnik/mussia31
gazelle(
    name = "gazelle",
    #    gazelle = ":gazelle_js",
    #    languages = DEFAULT_LANGUAGES + [
    #        "@com_github_benchsci_rules_nodejs_gazelle//gazelle",
    #    ],
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# load(":foo.bzl", "foo_binary")

# foo_binary(name = "bin")
py_binary(
    name = "foo",
    srcs = ["foo.py"],
    #    data = [":transform"],  # a cc_binary which we invoke at run time
    deps = [
        #    ":foolib",  # a py_library
    ],
)

# # must have tests or errors
py_test(
    name = "foo.test",
    srcs = ["foo.test.py"],
    deps = [
        #        ":foolib",  # a py_library
    ],
)

# load('//some/pkg:rules.bzl', 'example_library')

# example_library(
#     name = "example_target",
#     # deps = [":another_target"],
# )
