load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_library(
    name = "go-app_lib",
    srcs = ["main.go"],
    importpath = "github/yurikrupnik/mussia31/apps/go/go-app",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gorilla_mux//:mux"],
)

go_binary(
    name = "go-apppo",
    embed = [":go-app_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go-app_test",
    srcs = ["main_test.go"],
    embed = [":go-app_lib"],
)

go_image(
    name = "go_app",
    binary = ":go-app",
    #    srcs = ["main.go"],
)

container_push(
    name = "publish",
    format = "Docker",
    image = ":go-app",
    registry = "registry.hub.docker.com",
    repository = "yurikrupnik/go-api-rest",
    tag = "2",
)
#
#go_image(
#    name = "go_apps",
#    importpath = "github/yurikrupnik/mussia31",
#)

# container_image(
#     name = "helloworld",
# )
