#load("@pip//:requirements.bzl", "requirement")
#load("@io_bazel_rules_docker//python3:image.bzl", py_image = "py3_image")
#load("@io_bazel_rules_docker//container:container.bzl", "container_push")
#
py_library(
    name = "calculator",
    srcs = ["calculator.py"],
    #    visibility = ["//apps/python/calculator:__pkg__"],
)

py_test(
    name = "calculator_test",
    srcs = ["calculator_test.py"],
)
